--- a/template.html
+++ b/template.html
@@ -380,7 +380,7 @@
         }
 
         .cast-block {
-            color: var(--cast-red);
+            color: var(--border-color);
             margin: 5px 5px 5px 160px;
             padding: 1px 1px;
             text-align: center;
